--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 7/Análisis2.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 7/Análisis2.tex
@@ -130,7 +130,10 @@
 		\label{fig:Valores del tiempo del calculo de la integral de sen(x)}
 	\end{center}
 \end{figure}
-Tal y como se ve en la gráfica y en la tabla el algoritmo \texttt{intParaleloFutureCont.java} es un poco más eficiente que el algoritmo \texttt{intParalelomultiCont.java}. La diferencia empieza a notarse a partir de los 5 millones de puntos y, de ahí en adelante, dicha diferencia va creciendo poco a poco.
+
+	Tal y como se ve en la gráfica y en la tabla el algoritmo \texttt{intParaleloFutureCont.java} es más eficiente que el algoritmo \texttt{intParalelomultiCont.java} debido al uso de la interfaz \texttt{Callable} y objetos \texttt{Future}.
+
+\texttt{intParalelomultiCont.java} es más eficiente que \texttt{intParalelauniCont.java} debido al uso de contadores parciales, lo que elimina el cerrojo que nos causaba la pérdida de tiempo.
 
 
 
