--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 2/RODRIGUEZ_HERAS_JESUS/p2/e1.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 2/RODRIGUEZ_HERAS_JESUS/p2/e1.tex
@@ -1,3 +1,3 @@
-$$ f(radio,rango,salud)=(radio+rango)-1+rango^2+3\frac{radio}{salud} $$
+$$ f(radio,rango,salud,dano,coste,dispersion,ataquesPorSegundo)=\frac{rango*dano*ataquesPorSegundo*salud}{dispersion*coste} $$
 
-Escriba aquí su respuesta al ejercicio 1.
+La función que se encarga de asignar valores a las defensas la hemos planteado de forma simple tal que divide lo considerado ``bueno'' (rango, daño, ataques por segundo y salud) entre lo considerado ``malo'' (dispersión y coste).
