--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 2/RODRIGUEZ_HERAS_JESUS/p2/e2.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 2/RODRIGUEZ_HERAS_JESUS/p2/e2.tex
@@ -1,1 +1,2 @@
-Escriba aquí su respuesta al ejercicio 2.
+%Escriba aquí su respuesta al ejercicio 2.
+La estructura utilizada para representar la tabla de subproblemas resueltos es una matriz de tipo \texttt{float} de tantas filas como defensas hay y tantas columnas como ases tenemos a nuestra disposición.
