--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 2/RODRIGUEZ_HERAS_JESUS/p2/e4.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 2/RODRIGUEZ_HERAS_JESUS/p2/e4.tex
@@ -1,15 +1,16 @@
-\begin{lstlisting}
-// sustituya este codigo por su respuesta
-void selectDefenses(...) {
-
-    unsigned int cost = 0;
-    std::list<Defense*>::iterator it = defenses.begin();
-    while(it != defenses.end()) {
-        if(cost + (*it)->cost <= ases) {
-            selectedIDs.push_back((*it)->id);
-            cost += (*it)->cost;
-        }
-        ++it;
-    }
-}
-\end{lstlisting}
+%\begin{lstlisting}
+%// sustituya este codigo por su respuesta
+%void selectDefenses(...) {
+%
+%    unsigned int cost = 0;
+%    std::list<Defense*>::iterator it = defenses.begin();
+%    while(it != defenses.end()) {
+%        if(cost + (*it)->cost <= ases) {
+%            selectedIDs.push_back((*it)->id);
+%            cost += (*it)->cost;
+%        }
+%        ++it;
+%    }
+%}
+%\end{lstlisting}
+\lstinputlisting[language=C]{recuperar.cpp}
