Retocado lo de DA y hecho el problema de los filosofos

--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 2/RODRIGUEZ_HERAS_JESUS/p1/e2.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 2/RODRIGUEZ_HERAS_JESUS/p1/e2.tex
@@ -1,22 +1,1 @@
-%Escriba aquí su respuesta al ejercicio 2.
-La función de factibilidad diseñada recibe los siguientes parámetros de entrada:
-\begin{itemize}
-	\item \texttt{float x}: Posición en el eje ``X'' donde se va a comprobar la factibilidad de colocar una defensa.
-	\item \texttt{float y}: Posición en el eje ``Y'' donde se va a comprobar la factibilidad de colocar una defensa.
-	\item \texttt{Defense* defensa}: Defensa que se va a comprobar.
-	\item \texttt{std::list<Object*> obstaculos}: Lista de obstáculos del terreno de juego.
-	\item \texttt{float mapWidth}: Tamaño de la anchura del mapa.
-	\item \texttt{float mapHeight}: Tamaño del alto del mapa.
-	\item \texttt{std::list<Defense*> defensas}: Lista de defensas del juego.
-	\item \texttt{float cellWidth}: Ancho de las celdas.
-	\item \texttt{float cellHeight}: Alto de las celdas.
-\end{itemize}
-Primeramente se declara una variable de tipo lógica llamada \texttt{entra} inicializada a \texttt{true}, que será lo que retornará esta función.
-
-Luego se comprueban los siguientes factores:
-\begin{enumerate}
-	\item La defensa entra en el mapa. Es decir, no se sale por los bordes del mismo. Lo cual es calculado teniendo en cuenta el radio de la defensa y las dimensiones (ancho y alto) del mapa. En caso contrario, la variable \texttt{entra} tomaría el valor \texttt{false}.
-	\item Colisión con obstáculo: Se comprueba que la defensa no colisiona con ninguno de los obstáculos del terreno de juego. En caso contrario, la variable \texttt{entra} tomaría el valor \texttt{false}.
-	\item Colisión con otra defensa anteriormente colocada: Se recorre la lista de defensas comprobando que, de las ya colocadas, es decir, las $n-1$ defensas anteriores, no colisionen con la defensa que queremos colocar. En caso contrario, la variable \texttt{entra} tomaría el valor \texttt{false.}
-\end{enumerate}
-Finalmente se devuelve el valor de la variable \texttt{entra}.
+Escriba aquí su respuesta al ejercicio 2.
