Práctica 8 de PCTR terminada y empezada la 9, pero casi terminada también

--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 9/monitorCadena.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 9/monitorCadena.tex
@@ -81,7 +81,7 @@
 	\maketitle
 	\begin{abstract} %Poner esto en todas las prácticas de PCTR
 		\begin{center}
-			Monitor teórico del ejercicio 2 de la práctica 9.
+			Monitores teóricos del ejercicio 2 de la práctica 9.
 		\end{center}
 	\end{abstract}
 	\thispagestyle{empty}
@@ -102,7 +102,11 @@
 	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
 
 
-COZA
+\section{monitorCadena\_1}
+\lstinputlisting[language=Pascal]{monitorCadena_1.txt}
+\newpage
 
+\section{monitorCadena\_2}
+\lstinputlisting[language=Pascal]{monitorCadena_2.txt}
 
 \end{document}
