--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 9/monitorImpresion.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 9/monitorImpresion.tex
@@ -81,7 +81,7 @@
 	\maketitle
 	\begin{abstract} %Poner esto en todas las prácticas de PCTR
 		\begin{center}
-			Monitor teórico del ejercicio 2 de la práctica 9.
+			Monitor teórico del ejercicio 1 de la práctica 9.
 		\end{center}
 	\end{abstract}
 	\thispagestyle{empty}
@@ -101,7 +101,7 @@
 	%%Configuracion del paquete listings
 	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
 
-COZA
+\lstinputlisting[language=Pascal]{monitorimpresion.txt}
 
 
 \end{document}
