--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 9/monitorCadena.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 9/monitorCadena.tex
@@ -81,7 +81,7 @@
 	\maketitle
 	\begin{abstract} %Poner esto en todas las prácticas de PCTR
 		\begin{center}
-			Monitores teóricos del ejercicio 2 de la práctica 9.
+			Monitor teórico del ejercicio 2 de la práctica 9.
 		\end{center}
 	\end{abstract}
 	\thispagestyle{empty}
