--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 9/monitorImpresion.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 9/monitorImpresion.tex
@@ -101,6 +101,7 @@
 	%%Configuracion del paquete listings
 	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
 
+\section{monitorImpresion}
 \lstinputlisting[language=Pascal]{monitorimpresion.txt}
 
 
