--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 3/RODRIGUEZ_HERAS_JESUS/p3/e1.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 3/RODRIGUEZ_HERAS_JESUS/p3/e1.tex
@@ -1,1 +1,6 @@
-Escriba aquí su respuesta al ejercicio 1.
+%Escriba aquí su respuesta al ejercicio 1.
+\begin{itemize}
+	\item \textbf{Sin ordenación:} En el caso en el que no tenemos ordenación, he usado una matriz de tipo \texttt{float} del número de celdas de ancho (de anchura) por el número de celdas de alto (de altura).
+	\item \textbf{Con ordenación:} En los casos en los que sí tenemos ordenación, he creado una clase llamada \texttt{posicionConValor}, la cual guarda tanto la posición (dos enteros) como el valor (\texttt{float}) de una celda.
+	\lstinputlisting[language=C]{posicionConValor.cpp}
+\end{itemize}
