--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 3/RODRIGUEZ_HERAS_JESUS/p3/e6.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 3/RODRIGUEZ_HERAS_JESUS/p3/e6.tex
@@ -3,8 +3,11 @@ El algoritmo usado para la toma de tiempos es el siguiente:
 \lstinputlisting[language=c]{tomaTiempos.cpp}
 Para la realización de la gráfica usamos el código que hay en el \texttt{makefile} de la práctica y en el archivo \texttt{graphic.plot}:
 \lstinputlisting[language=bash]{graphic.plot}
+\newpage
 El resultado obtenido de las mediciones es el siguiente:
-\begin{figure}[ht]
-	\centering
-	\includegraphics{graphic.eps}
-\end{figure}
+\begin{center}
+	\begin{figure}[h]
+		\centering
+		\includegraphics{graphic.eps}
+	\end{figure}
+\end{center}
