--- a/3 GII/1er Semestre/DA/Prácticas/Práctica 3/RODRIGUEZ_HERAS_JESUS/p3/e5.tex
+++ b/3 GII/1er Semestre/DA/Prácticas/Práctica 3/RODRIGUEZ_HERAS_JESUS/p3/e5.tex
@@ -3,7 +3,7 @@
 	\item \textbf{Sin ordenación:} Para este caso, el código para colocar las defensas es de orden $\theta(n^2)$.
 	\item \textbf{Con ordenación:}
 	\begin{itemize}
-		\item \textbf{Montículo:} Para este caso, el algoritmo de colocación de defensas es de orden $\theta(n)$.
-		\item \textbf{Fusión y ordenación rápida:} En estos casos tenemos tiempos en el orden de  $n\cdot log_{2}(n)$.
+		\item \textbf{Montículo:} Para este caso, el algoritmo de colocación de defensas es de orden $\theta(n\cdot log_{2}(n))$.
+		\item \textbf{Fusión y ordenación rápida:} En estos casos tenemos tiempos en el orden de  $O(n\cdot log_{2}(n))$.
 	\end{itemize}
 \end{itemize}
