--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 12/ConvolucionAnalisis.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 12/ConvolucionAnalisis.tex
@@ -109,5 +109,7 @@
 \subsection{Speed-Up}
 \subsection{Tiempo}
 
+\section{Conclusión}
+La conclusión general que podemos obtener es que el mejor número de hebras es aquel que se corresponde con los cores de la máquina en la que se está ejecutando la aplicación, debido a que, un número excesivo de hebras, conllevará un aumento del tiempo de ejecución.
 
 \end{document}
