Ejercicios de PCTR

--- a/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 12/ConvolucionAnalisis.tex
+++ b/2 GII/1er Semestre/PCTR/Curso 2018-2019/Prácticas/Práctica 12/ConvolucionAnalisis.tex
@@ -116,15 +116,15 @@
 
 \section{Windows}
 \subsection{Tiempo}
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics[scale=1]{TiempoWindows.png}
-%\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.8]{TiempoWindows.png}
+\end{figure}
 \subsection{Speed-Up}
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics[scale=1]{SpeedUpWindows.png}
-%\end{figure}
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.8]{SpeedUpWindows.png}
+\end{figure}
 
 \section{Conclusión}
 La conclusión general que podemos obtener de esta práctica es que, en Java, el mejor número de hebras es aquel que se corresponde con los cores de la máquina en la que se está ejecutando la aplicación, debido a que, un número excesivo de hebras, conllevará un aumento del tiempo de ejecución. Sin embargo, en C++, podemos observar como el Speed-Up sigue en aumento con un número mayor de hebras.
