--- a/4 GII/2do Semestre/PINF/Boceto/Presentación/Presentación Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Boceto/Presentación/Presentación Fantasy.tex
@@ -132,6 +132,13 @@ Gabriel Fernando Sánchez Reina
 \end{block}
 \end{frame}
 
+\begin{frame}{Boceto}
+	\begin{figure}
+		\centering
+		\includegraphics[scale=0.21]{Boceto.jpeg}
+	\end{figure}
+\end{frame}
+
 \section{Características}
 \begin{frame}{Características}
 \begin{itemize}
